Fixed the graphic title so it doesn't push the horizontal scrollbar.

--- a/badlogin.css
+++ b/badlogin.css
@@ -129,6 +129,7 @@ p, ol {
     position: relative;
     top: 15px;
     left: 75%;
+    width: 25%;
 }
 
 .red {
